# bedrock-protocol-packets-ng

./: README.md  pyproject.toml
bedrock_protocol/packets/: minecraft_packet_ids.py  minecraft_packets.py  shared_constants.py
bedrock_protocol/packets/enums/: __init__.py  authentication_type.py  disconnect_fail_reason.py
bedrock_protocol/packets/packet/: __init__.py  block_actor_data_packet.py  container_open_packet.py  disconnect_packet.py  item_registry_packet.py  item_stack_request_packet.py  item_stack_response_packet.py  level_sound_event_packet.py  login_packet.py  update_block_packet.py
bedrock_protocol/packets/types/: __init__.py  connection_request.py  item_data.py  item_stack_request.py  item_stack_response.py
tests/: test.py  uuid_test.py
