[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bedrock-protocol-packets-ng"
version = "0.0.9"
authors = [{ name = "GlacieTeam" }, { name = "Shock95" }]
description = "Minecraft Bedrock Packets Codec Library"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MPL-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
]
dependencies = ["bstream >= 1.0.1", "rapidnbt >= 1.3.1"]

[project.urls]
homepage = "https://github.com/Shock95/bedrock-protocol-packets-ng"
original = "https://github.com/GlacieTeam/bedrock-protocol-packets"

[tool.setuptools]
packages = { find = {} }
